--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^8.12.1",
     "nano-address-validator": "^3.0.0",
     "simple-nano-wallet": "^1.0.5",
-    "tslog": "^4.9.3"
+    "tslog": "^4.9.3",
+    "ws": "^8.18.1"
   }
 }
